2007-09-08  Thomas Moulard  <thomas.moulard@gmail.com>

	Add introspection functions.
	* src/object/atom.hxx: Fix code/primitive printing.
	* src/object/code-class.cc: Send endline after echo.
	* src/object/object-class.cc: Add slotNames, parents, getSlot, setSlot.
	* src/object/object.hh: Add accessor for parents and slots.
	* src/object/object.hxx: Idem.

2007-09-07  Thomas Moulard  <thomas.moulard@gmail.com>

	Handle run-time URBI errors.
	* src/object/float-class.cc: Primitives now throw errors.
	* src/object/urbi-exception.cc: Fix error format.
	* src/runner/runner.cc: Catch run-time errors.

2007-09-05  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Fix the test suite.
	* src/object/object-test-primitives.cc: Adjust to match the new
	prototypes (pass a NULL context to float_class_mul and
	float_class_add).
	* tests-local.mk (XFAIL_TESTS): Adjust (sort and add
	parse-errors.chk since a k2-specific version of this test will be
	added).

2007-09-04  mefyl  <mefyl@lrde.epita.fr>

	Add list insertion functions.
	* src/object/atom.hh,
	* src/object/atom.hxx: Add a non-const accessor to the held value.
	* src/object/primitives.hh: Add macro for primitive taking objects
        as argument.
	* src/object/list-class.cc,
	* src/object/list-class.hh: Add insertion function.

2007-09-04  Akim Demaille  <demaille@gostai.com>

	Don't yield for Scope
	* src/runner/runner.cc (YIELD): Take no arg, it is very misleading:
	it looks like we yield a result.
	(Scope): Don't yield here, we do nothing.

2007-09-04  Akim Demaille  <demaille@gostai.com>

	Fix scopes handling
	* src/ast/ast.yml: Implement default visitor.
	* src/runner/runner.cc: Fix Scope processing.

2007-09-04  Akim Demaille  <demaille@gostai.com>

	Start scopes implementation
	* src/ast/ast.yml (Scope): New.
	* src/parser/bison/ugrammar.y: Support it.
	* src/runner/runner.hh, src/runner/runner.hxx,
	* src/runner/runner.cc: Ditto.
	(locals_): New.

2007-09-04  Akim Demaille  <demaille@gostai.com>

	k2-check